--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1068,7 +1068,7 @@ a {
   box-shadow: inset 0px 0px 0px 2px rgba(131, 179, 211, 1); /*пример бордера через тень, можно ли так? Плюсом вопрос про активность. Бордер появляется только при нажатии, или пока чекбокс выбран?.*/
 }
 
-.control-input:checked + .control-mark:::before {
+.control-input:checked + .control-mark::before {
   content: "";
   position: absolute;
   width: 20px;
@@ -1263,7 +1263,9 @@ a {
 }
 
 .close-modal {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #F2F2F2;
   position: absolute;
   top: 64px;
@@ -1338,7 +1340,7 @@ a {
   border: 0;
   font-weight: 700;
   padding: 0;
-  max-width: 31px !important; /*test */
+  max-width: 31px; /*test */
 }
 
 .number-input::-webkit-inner-spin-button,
@@ -1367,7 +1369,7 @@ a {
   margin-right: 10px;
 }
 
-.circle-information {
+.tooltip {
   padding: 3px;
   height: 26px;
   width: 26px;
@@ -1375,6 +1377,8 @@ a {
   border-radius: 50%;
   box-sizing: border-box;
   margin-right: 46px;
+  display: inline-block;
+  position: relative;
 }
 
 .submit-registration {
@@ -1386,5 +1390,39 @@ a {
   padding-top: 18px;
   padding-bottom: 18px;
   text-transform: uppercase;
-  border-radius: 4px;
+  border-radius: 10px;
+}
+
+/* tooltip test version*/
+
+.tooltip .tooltip-text {
+  visibility: hidden;
+  width: 216px; /*256*/
+  background-color: #333333;
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 5;
+  top: 150%;
+  left: 50%;
+  margin-left: -128px;
+  padding: 15px 18px 18px 22px;
+  box-shadow: 0px  15px 30px 0px rgba(0, 0, 0, 0.3);
+}
+
+.tooltip .tooltip-text::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -10px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent #333333 transparent;
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
 }
