--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1151,6 +1151,21 @@ a {
   color: #000000;
 }
 
+.number-input:hover {
+  border: none;
+  outline: none;
+}
+
+.number-input:active {
+  border: none;
+  outline: none;
+}
+
+.number-input:focus {
+  border: none;
+  outline: none;
+}
+
 input[type='date']::-webkit-calendar-picker-indicator:hover {
   opacity: 1;
 }
@@ -1411,7 +1426,7 @@ input[type='date']::-webkit-calendar-picker-indicator:hover {
   background-color: #F2F2F2;
   padding: 12px 20px;
   font-size: 18px;
-  line-height: 20px;
+  line-height: 24px;
   font-weight: 700;
   border: none;
   outline: none;
@@ -1551,3 +1566,5 @@ input[type='date']::-webkit-calendar-picker-indicator {
 .tooltip-text {
   cursor: default;
 }
+
+/*   */
