--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,6 +100,7 @@ a {
   line-height: 24px;
   font-weight: 700;
   font-size: 20px;
+  padding: 20px 0;
 }
 
 .navigation-item {
@@ -464,7 +465,7 @@ a {
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 168px;
+  padding-left: 152px;
   margin-right: auto;
   flex-wrap: wrap;
 }
@@ -872,24 +873,40 @@ a {
 }
 
 .range-input input::-webkit-slider-thumb {
+  -webkit-appearance: none;
   height: 20px;
   width: 20px;
-  -webkit-appearance: none;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 25%;
   pointer-events: auto;
   cursor: pointer;
 }
 
 .range-input input::-moz-range-thumb {
+  -moz-appearance: none;
   height: 20px;
   width: 20px;
-  -moz-appearance: none;
   background: #FFFFFF;
   border: none;
   border-radius: 25%;
   pointer-events: auto;
   cursor: pointer;
+}
+
+input::-webkit-slider-thumb:focus {
+  box-shadow: 0px 0px 0px 3px rgba(131, 179, 211, 1);
+}
+
+.range-input:hover input::-webkit-slider-thumb {
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.range-input:active input::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px 2px rgba(131, 179, 211, 1);
+}
+
+.range-input:focus input::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px 3px rgba(131, 179, 211, 1);
 }
 
 .navigation-link-current{
@@ -1125,7 +1142,7 @@ a {
   cursor: pointer;
 }
 
-.control:hover .control-mark{
+.control:hover .control-mark {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -1189,10 +1206,6 @@ a {
 .number-input:focus {
   border: none;
   outline: none;
-}
-
-input[type='date']::-webkit-calendar-picker-indicator:hover {
-  opacity: 1;
 }
 
 .minus:hover,
@@ -1389,7 +1402,7 @@ input[type='date']::-webkit-calendar-picker-indicator:hover {
   transform: scale(0);
   transition: transform .6s;
   position: relative;
-  min-width: 577px;
+  max-width: 576px;
 }
 
 .modal.visible {
@@ -1437,6 +1450,7 @@ input[type='date']::-webkit-calendar-picker-indicator:hover {
 
 .date-input {
   flex-grow: 1;
+  width: auto;
   background-color: #F2F2F2;
   padding: 12px 20px;
   font-size: 18px;
@@ -1446,18 +1460,31 @@ input[type='date']::-webkit-calendar-picker-indicator:hover {
   outline: none;
   border-radius: 4px;
   cursor: text;
-  color: rgba(0,0,0,0.6);
+  color: #000000;
+  background-image: url("../images/icons/calendar-icon.svg");
+  background-repeat: no-repeat;
+  background-position: top 16px right 22px;
+  margin-bottom: 4px;
 }
 
-input[type='date']::-webkit-calendar-picker-indicator {
-  opacity: 0.3;
-  cursor: pointer;
+.date-check {
+  grid-column-start: 2;
+  grid-column: end: 3;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+  margin-bottom: 23px;
+  padding-left: 20px;
+  visibility: visible; /*hidden if empty */
+}
+
+.check-error {
+  color: #FF5757;
 }
 
 .modal-filter-form {
   display: grid;
   grid-template-columns: 137px auto;
-  row-gap: 48px;
 }
 
 .guests-number-wrapper {
@@ -1474,7 +1501,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 
 .container-counter:not(:last-child) {
-  margin-right: auto;
+  margin-right: 88px;
 }
 
 .number-input {
@@ -1549,6 +1576,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
   text-transform: uppercase;
   border-radius: 10px;
   cursor: pointer;
+  margin-top: 48px; /* проблематично задать маргин боттом элементам сверху */
 }
 
 /* Tooltip */
@@ -1566,7 +1594,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
   top: 150%;
   left: 50%;
   margin-left: -128px;
-  padding: 15px 18px 18px 22px;
+  padding: 20px 18px 23px 22px;
   box-shadow: 0px  15px 30px 0px rgba(0, 0, 0, 0.3);
 }
 
