--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,23 +10,7 @@
 
 @font-face {
   font-family: "PT Sans";
-  font-style: italic;
-  font-weight: 400;
-  src: url(../fonts/ptsans-400.woff2) format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "PT Sans";
   font-style: normal;
-  font-weight: 700;
-  src: url(../fonts/ptsans-700.woff2) format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "PT Sans";
-  font-style: italic;
   font-weight: 700;
   src: url(../fonts/ptsans-700.woff2) format("woff2");
   font-display: swap;
@@ -36,6 +20,7 @@
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -117,7 +102,7 @@ a {
   overflow: hidden;
   background-image: url("../images/preview-header-background-mask.svg"), url("../images/preview-header-background.jpg");
   background-repeat: no-repeat, no-repeat;
-  background-size: cover, cover;
+  background-size: 100%, cover;
   background-position: bottom, top;
   text-align: center;
   min-height: 485px;
@@ -333,11 +318,6 @@ a {
 
 .catalog-filter-title {
   text-transform: capitalize;
-}
-
-.breadcrumbs li {
-  line-height: 21px;
-  font-size: 16px;
 }
 
 .catalog-filter-group legend,
@@ -567,6 +547,54 @@ a {
   background-position: center top 81px;
 }
 
+/* Breadcrumbs */
+
+.breadcrumbs {
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  gap: 28px;
+  margin-bottom: 40px;
+}
+
+.breadcrumbs-item>a,
+.breadcrumbs-item.active {
+  color: #fff;
+  line-height: 21px;
+  font-size: 16px;
+  display: block;
+  text-decoration: none;
+  position: relative;
+  height: 21px;
+  text-align: center;
+  user-select: none;
+  text-transform: capitalize;
+}
+
+.breadcrumbs-item>a::before {
+  content: "";
+  background-image: url("../images/icons/breadcrumbs-arrow.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  width: 8px;
+  height: 21px;
+  right: -18px;
+  cursor: default;
+}
+
+.breadcrumbs-home-icon {
+  display: block;
+  height: 21px;
+  width: 13px;
+  background-image: url("../images/icons/breadcrumbs-home-icon.svg");
+  background-repeat: no-repeat;
+  background-position: left 0px bottom 3px;
+}
+
+/* Breadcrumbs end*/
+
 .advantage-icon-present {
   background-image: url("../images/icons/advantage-icon-3.svg");
   background-repeat: no-repeat;
@@ -619,16 +647,6 @@ a {
 
 .catalog-filter {
   display: flex;
-}
-
-.breadcrumbs {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 40px;
-  padding-left: 0;
 }
 
 .catalog-filter-list li {
@@ -909,7 +927,7 @@ input::-webkit-slider-thumb:focus {
   box-shadow: 0px 0px 0px 3px rgba(131, 179, 211, 1);
 }
 
-.navigation-link-current{
+.navigation-link-current {
   text-decoration: underline;
   text-decoration-color: #756257;
   text-underline-offset: 19px;
@@ -971,6 +989,7 @@ input::-webkit-slider-thumb:focus {
   line-height: 10px;
   color: #ffffff;
   display: block;
+  cursor: default;
 }
 
 .social-button-vk {
@@ -1078,10 +1097,6 @@ input::-webkit-slider-thumb:focus {
   padding: 8px 18px;
 }
 
-.breadcrumbs-item-current a {
-  color: #ffffff;
-}
-
 .stars-count li {
   display: block;
   width: 18px;
@@ -1093,24 +1108,6 @@ input::-webkit-slider-thumb:focus {
 
 .stars-count li:last-child {
   margin-right: 0px;
-}
-
-.breadcrumbs-home {
-  display: block;
-  width: 12px;
-  height: 15px;
-  background: url("../images/icons/breadcrumbs-home-icon.svg");
-  background-repeat: no-repeat;
-  background-position: top;
-}
-
-.breadcrumbs-arrow {
-  display: block;
-  width: 8px;
-  height: 20px;
-  background: url("../images/icons/breadcrumbs-arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .control {
@@ -1225,7 +1222,7 @@ input::-webkit-slider-thumb:focus {
   background-color: #E6E6E6;
 }
 
-.close-modal:active > svg{
+.close-modal:active > svg {
   opacity: 0.3;
 }
 
@@ -1342,16 +1339,6 @@ input::-webkit-slider-thumb:focus {
 
 .reset-button:disabled {
   opacity: 0.1;
-}
-
-.breadcrumbs-item-current:hover,
-.breadcrumbs-home:hover {
-  opacity: 0.6;
-}
-
-.breadcrumbs-item-current:active,
-.breadcrumbs-home:active {
-  opacity: 0.3;
 }
 
 .view-icon-catalog:hover,
@@ -1476,6 +1463,7 @@ input::-webkit-slider-thumb:focus {
   margin-bottom: 23px;
   padding-left: 20px;
   visibility: visible; /*hidden if empty */
+  cursor: default;
 }
 
 .check-error {
